# hw3-vaniaalf

./: .gitignore  Makefile  _toc.yml  ai_documentation.txt  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
.ipynb_checkpoints/: README-checkpoint.md  myst-checkpoint.yml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/.ipynb_checkpoints/: utils-checkpoint.py
ligotools/tests/: test_utils.py
ligotools/tests/.ipynb_checkpoints/: test_readligo-checkpoint.py
