[build-system]
requires = ["setuptools >= 70", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  {name = "LIGO Scientific Collaboration (LSC)"},
  {name = "Vania Alfaro"}
]
description = "Tools for reading and analyzing LIGO data"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "ipykernel"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools", "ligo"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-vaniaalf"
Issues = "https://github.com/UCB-stat-159-f25/hw3-vaniaalf/issues"

[tool.setuptools.packages]
find = {}